# mumpsimus

./: .gitignore  .proverc  .travis.yml  BUILD.md  LICENSE.md  Makefile  Makefile.am  Makefile.in  Makefile.orig  README.md  TODO.md  configure  configure.ac  noop.c  setenv.sh
Mumpsimus/Mumpsimus.xcodeproj/: project.pbxproj
Mumpsimus/Mumpsimus.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Mumpsimus/Mumpsimus.xcodeproj/project.xcworkspace/xcuserdata/dan.xcuserdatad/: UserInterfaceState.xcuserstate
Mumpsimus/Mumpsimus.xcodeproj/xcuserdata/dan.xcuserdatad/xcschemes/: Mumpsimus.xcscheme  xcschememanagement.plist
build-aux/: autogen.sh  check-versions  prepare-build-env  prepare-travis-ci
exp/: log_proxy_example.sh  odd_proxy_example.sh  turn_images_upside_down.sh
exp/perl/: Build.PL  MANIFEST  META.yml  MYMETA.yml  setupenv.sh
exp/perl/lib/App/: TTT.pm
exp/perl/lib/App/TTT/: Message.pm  Request.pm  Response.pm  UserAgent.pm
exp/perl/t/: 01app_ttt.t  generate_big_response.pl
exp/perl/t/samples/: get_request1.txt
src/: Makefile  Makefile.am  Makefile.in  body.c  config.h  config.h.in  connect.c  headers.c  http_parser.c  http_parser.h  log  log.c  mumpsimus.h  noop.c  null  pipeif.c  pipes.c  pipes.h  pipetest  pipetest.c  stream_buffer.c  stream_buffer.h  ulog.c  ulog.h  upcase  upcase.c  util.c  util.h
system-tests/: Makefile.am  body.t  headers.t  log.t  noop.t  pipeif.t  run-system-tests.pl
system-tests/lib/Test/: Command.pm
system-tests/test-data/: sample-request-connect.txt  sample-request-get.txt  sample-request-get3.txt  sample-request-put.txt  sample-response-200-png.txt  sample-response-302.txt
t/: 01noop.t  02log.t  03pipeif.t  Makefile  Makefile.am  Makefile.in
t/test-data/: sample-request-get2.txt  sample-response-302.txt
tests/: Makefile.am
unit-tests/: Makefile.am  check_pipes.c  check_stream_buffer.c  check_util.c
