
bin_PROGRAMS = noop null log pipeif

log_SOURCES = log.c http_parser.c http_parser.h util.c util.h ulog.c ulog.h
noop_SOURCES = noop.c util.c util.h ulog.h ulog.c
null_SOURCES = noop.c util.c util.h ulog.h ulog.c
pipeif_SOURCES = pipeif.c util.h util.c ulog.h ulog.c http_parser.h http_parser.c stream_buffer.h stream_buffer.c



